syntax = "proto3";
package kv;

message KeyRange {
  bytes start=1;
  bytes end=2;
}

message KVPair {
  bytes key=1;
  bytes value=2;
}


message KVRequest {
  message KVPutRequest{
    KVPairs kvs=1;
  }
  message KVGetRequest{
    KeyRange range=1;
  }
  message KVDeleteRequest{
    KeyRange range=1;
  }
  oneof op {
    KVPutRequest set=1;
    KVGetRequest get=2;
    KVDeleteRequest delete=3;
  }
}

message KVPairs{
  repeated KVPair kvs=1;
}

message KVResponse{
  message KVPairOpt{
    KVPair kv=1;
  }
  repeated KVPairOpt kvs=1;
}

message MetaKVRequest{
  KVRequest request=1;
}

message MetaKVResponse{
  KVResponse response=1;
}